The second technique of matching was developed

--- a/data_extraction/data_extraction.ipynb
+++ b/data_extraction/data_extraction.ipynb
@@ -2160,6 +2160,260 @@
     "                                              ,surname_column=surname_column\n",
     "                                              ,first_name_column=name_column)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It is matched based on the occurrences of the full name word set of the website data present in the CSV data."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reg_ex= re.compile(r'[^\\w\\s]')\n",
+    "def get_if_name_is_similar(person_name_website, person_name_csv):\n",
+    " person_name_website = reg_ex.sub( '', person_name_website).split()\n",
+    " person_name_csv = reg_ex.sub('', person_name_csv).split()\n",
+    " intersection_set=set(person_name_website).intersection(person_name_csv)\n",
+    " return len(intersection_set)==len(person_name_website)\n",
+    "\n",
+    "def has_same_lastname(lastname_person1,last_name_person2):\n",
+    " return lastname_person1==last_name_person2\n",
+    "\n",
+    "def has_similar_name(row):\n",
+    " return ( has_same_lastname(row[\"Surname_x\"],row[\"Surname_y\"])\n",
+    " and get_if_name_is_similar(row[\"Name_x\"],row[\"Name_y\"]) )\n",
+    "\n",
+    "data_unmatched_csv['key'] = 1\n",
+    "web_unmatched_data['key'] = 1\n",
+    "matched_data_second_form = pd.merge(web_unmatched_data\n",
+    "                                    , data_unmatched_csv\n",
+    "                                    , on='key')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "matched_data_second_form['is_a_match'] = matched_data_second_form.apply(has_similar_name\n",
+    "                                                            ,axis=\"columns\")\n",
+    "matched_data_second_form.drop(\"key\",axis=\"columns\",inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "is_a_match=matched_data_second_form[\"is_a_match\"]\n",
+    "matched_data_second_form=matched_data_second_form[is_a_match]\n",
+    "matched_data_second_form.reset_index(drop=True,inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(252, 14)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "matched_data_second_form.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Surname_x</th>\n",
+       "      <th>First Names</th>\n",
+       "      <th>Age_x</th>\n",
+       "      <th>Pclass</th>\n",
+       "      <th>Name_x</th>\n",
+       "      <th>Survived</th>\n",
+       "      <th>Name_y</th>\n",
+       "      <th>Sex</th>\n",
+       "      <th>Age_y</th>\n",
+       "      <th>SibSp</th>\n",
+       "      <th>Parch</th>\n",
+       "      <th>Embarked</th>\n",
+       "      <th>Surname_y</th>\n",
+       "      <th>is_a_match</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>anderson</td>\n",
+       "      <td>mr harry</td>\n",
+       "      <td>47.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>anderson, mr harry</td>\n",
+       "      <td>1</td>\n",
+       "      <td>anderson, mr. harry</td>\n",
+       "      <td>male</td>\n",
+       "      <td>48.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>S</td>\n",
+       "      <td>anderson</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>andrews</td>\n",
+       "      <td>miss kornelia theodosia</td>\n",
+       "      <td>62.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>andrews, miss kornelia theodosia</td>\n",
+       "      <td>1</td>\n",
+       "      <td>andrews, miss. kornelia theodosia</td>\n",
+       "      <td>female</td>\n",
+       "      <td>63.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>S</td>\n",
+       "      <td>andrews</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>barkworth</td>\n",
+       "      <td>mr algernon henry</td>\n",
+       "      <td>47.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>barkworth, mr algernon henry</td>\n",
+       "      <td>1</td>\n",
+       "      <td>barkworth, mr. algernon henry wilson</td>\n",
+       "      <td>male</td>\n",
+       "      <td>80.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>S</td>\n",
+       "      <td>barkworth</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>baumann</td>\n",
+       "      <td>mr john d.</td>\n",
+       "      <td>60.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>baumann, mr john d.</td>\n",
+       "      <td>0</td>\n",
+       "      <td>baumann, mr. john d</td>\n",
+       "      <td>male</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>S</td>\n",
+       "      <td>baumann</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>beckwith</td>\n",
+       "      <td>mrs sallie</td>\n",
+       "      <td>46.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>beckwith, mrs sallie</td>\n",
+       "      <td>1</td>\n",
+       "      <td>beckwith, mrs. richard leonard (sallie monypeny)</td>\n",
+       "      <td>female</td>\n",
+       "      <td>47.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>S</td>\n",
+       "      <td>beckwith</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Surname_x              First Names  Age_x  Pclass  \\\n",
+       "0   anderson                 mr harry   47.0       1   \n",
+       "1    andrews  miss kornelia theodosia   62.0       1   \n",
+       "2  barkworth        mr algernon henry   47.0       1   \n",
+       "3    baumann               mr john d.   60.0       1   \n",
+       "4   beckwith               mrs sallie   46.0       1   \n",
+       "\n",
+       "                             Name_x  Survived  \\\n",
+       "0                anderson, mr harry         1   \n",
+       "1  andrews, miss kornelia theodosia         1   \n",
+       "2      barkworth, mr algernon henry         1   \n",
+       "3               baumann, mr john d.         0   \n",
+       "4              beckwith, mrs sallie         1   \n",
+       "\n",
+       "                                             Name_y     Sex  Age_y  SibSp  \\\n",
+       "0                               anderson, mr. harry    male   48.0      0   \n",
+       "1                 andrews, miss. kornelia theodosia  female   63.0      1   \n",
+       "2              barkworth, mr. algernon henry wilson    male   80.0      0   \n",
+       "3                               baumann, mr. john d    male    NaN      0   \n",
+       "4  beckwith, mrs. richard leonard (sallie monypeny)  female   47.0      1   \n",
+       "\n",
+       "   Parch Embarked  Surname_y  is_a_match  \n",
+       "0      0        S   anderson        True  \n",
+       "1      0        S    andrews        True  \n",
+       "2      0        S  barkworth        True  \n",
+       "3      0        S    baumann        True  \n",
+       "4      1        S   beckwith        True  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "matched_data_second_form.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "matched_data_second_form.rename(columns={\"Surname_y\":\"Surname\",\"Name_y\":\"Name\"},inplace=True)"
+   ]
   }
  ],
  "metadata": {
